feat: 完成客户端消息接收模块

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -43,6 +43,7 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.8.1",
     "twrnc": "^4.6.1"
   },
   "devDependencies": {
