--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "http-errors": "~1.6.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "pug": "2.0.0-beta11",
     "socket.io": "^4.8.1"
