--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ DB_USER=root
 DB_PASSWORD=123456
 DB_NAME=travel
 JWT_SECRET=super-secret-jwt-key-which-should-be-long-enough-256
+# 这是我开发时用的，现在已经失效了
+MINIO_ENDPOINT=frp.caodong0225.top
+MINIO_PORT=443
+MINIO_USE_SSL=true
+MINIO_ACCESS_KEY=tMDi72DP50P8ua712A4Y
+MINIO_SECRET_KEY=t1ZH09OEesYYU8IXMg9HKzXFOnsWjDCDFTJjqMfF
+MINIO_BUCKET=xiecheng
+MINIO_PUBLIC_URL=https://frp.caodong0225.top
