feat: 完成视频上传模块

--- a/.env
+++ b/.env
@@ -10,4 +10,6 @@ MINIO_USE_SSL=true
 MINIO_ACCESS_KEY=tMDi72DP50P8ua712A4Y
 MINIO_SECRET_KEY=t1ZH09OEesYYU8IXMg9HKzXFOnsWjDCDFTJjqMfF
 MINIO_BUCKET=xiecheng
+MINIO_VIDEO_BUCKET=videos
+MINIO_THUMBNAIL_BUCKET=thumbnails
 MINIO_PUBLIC_URL=https://frp.caodong0225.top
