--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.5",
+    "mkdirp": "^3.0.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "pug": "2.0.0-beta11",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
