--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.6",
     "crypto-js": "^4.2.0",
     "expo": "~53.0.6",
+    "expo-av": "^15.1.6",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-document-picker": "^13.1.6",
