--- a/audit/package.json
+++ b/audit/package.json
@@ -15,6 +15,7 @@
     "@monaco-editor/react": "^4.7.0",
     "antd": "^5.24.7",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.6",
     "monaco-editor": "^0.52.0",
     "next": "15.3.1",
     "react": "^19.0.0",
